chore: initial commit

--- a/notebook/function_test.ipynb
+++ b/notebook/function_test.ipynb
@@ -30,7 +30,7 @@
     }
    ],
    "source": [
-    "model = AutoModelForSequenceClassification.from_pretrained(\"roberta-base\")"
+    "model = AutoModelForSequenceClassification.from_pretrained(\"bert-base-uncased\")"
    ]
   },
   {
